--- a/site/.kobweb/conf.yaml
+++ b/site/.kobweb/conf.yaml
@@ -1,14 +1,14 @@
 site:
-  title: "Malefic Kobweb Single Page"
+  title: "Malefic Monophobia"
 
 server:
   files:
     dev:
       contentRoot: "build/processedResources/js/main/public"
-      script: "build/kotlin-webpack/js/developmentExecutable/singlepage.js"
-      api: "build/libs/singlepage.jar"
+      script: "build/kotlin-webpack/js/developmentExecutable/monophobia.js"
+      api: "build/libs/monophobia.jar"
     prod:
-      script: "build/kotlin-webpack/js/productionExecutable/singlepage.js"
+      script: "build/kotlin-webpack/js/productionExecutable/monophobia.js"
       siteRoot: ".kobweb/site"
 
   port: 8080
