--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,12 @@ services:
   kobweb:
     build: .
     ports:
-      - "8080:8080"  # Change the first port (host) if you want to expose it on a different port
+      - "3333:3333"  # Bind the container's port 3333 to the host's port 3333
     environment:
-      - PORT=8080  # Change this if you want the application to run on a different port inside the container
+      - PORT=3333  # Set the environment variable for the port inside the container
     volumes:
-      - .:/app  # Mount the current directory to /app in the container
-    working_dir: /app/site  # Set the working directory to /app/site
+      - kobweb_data:/app/site  # Use a Docker volume for persistence and mount it to /app/site
+
+volumes:
+  kobweb_data:
+    driver: local
